tests/compile_fail/override_prefix_without_nested.rs
use conflaguration::Settings;

#[derive(Settings)]
struct BadConfig {
    #[setting(override_prefix = "CUSTOM")]
    field: u16,
}

fn main() {}
