tests/compile_fail/override_prefix_without_nested.stderr
error: override_prefix requires nested
 --> tests/compile_fail/override_prefix_without_nested.rs:6:5
  |
6 |     field: u16,
  |     ^^^^^
